--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
-    position: fixed;
+    position: relative;
     width: 100%;
     bottom: 0;
 }
@@ -75,16 +75,6 @@ footer {
     padding: 150px 0;
     margin-top: 60px;
     position: relative;
-}
-.hero::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 1;
 }
 .hero h1, .hero p {
     position: relative;
