--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     color: #333;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 header {
     background-color: rgba(0, 0, 0, 0.5);
@@ -48,6 +51,7 @@ nav a:hover {
     margin: 0 auto;
     overflow: hidden;
     padding-top: 100px;
+    flex: 1;
 }
 .content {
     margin: 20px 0;
@@ -64,6 +68,7 @@ footer {
     position: relative;
     width: 100%;
     bottom: 0;
+    margin-top: auto;
 }
 .hero {
     background-image: url('https://raw.githubusercontent.com/Reeshon/my-website/main/background.png');
@@ -121,6 +126,7 @@ footer {
     border-radius: 5px;
     font-size: 1.2em;
     transition: background-color 0.3s ease;
+    z-index: 3; /* Ensure button is above any potential overlays */
 }
 .button:hover {
     background-color: #e5533d;
