--- a/styles.css
+++ b/styles.css
@@ -64,11 +64,12 @@ footer {
     background-color: rgba(0, 0, 0, 0.5);
     color: #fff;
     text-align: center;
-    padding: 10px 0;
+    padding: 1px 0; /* Make the footer small */
     position: relative;
     width: 100%;
     bottom: 0;
     margin-top: auto;
+    font-size: 0.5em; /* Reduce font size */
 }
 .hero {
     background-image: url('https://raw.githubusercontent.com/Reeshon/my-website/main/background.png');
